<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search"
        android:id="@+id/search_text_from"
        android:title="@string/enter_your_departure"/>

    <include layout="@layout/separator"/>

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@id/search_text_from"
        android:background="@drawable/search"
        android:id="@+id/search_text_to"
        android:title="@string/enter_your_destination"/>

    <include layout="@layout/separator"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_date"
        android:text="21/05/2016"
        android:layout_below="@id/search_text_from"
        android:textColor="@color/white"
        android:background="@drawable/time_button"/>

    <include layout="@layout/separator"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_gravity="center" />

</LinearLayout>